# Students

./: pyproject.toml
2019/mehrdad/: contacts.db
2019/mehrdad/class_version/: main.py  phonebook.py  xxx.pickle
2019/mehrdad/foryou/: contacts.db  main.py  phonebook.py  phonebook_temp.py
2019/mehrdad/gui/: console.py  contacts.db  gui.py  main.py  phonebook.py
2019/mehrdad/gui2/: console.py  contacts.db  gui.py  phonebook.py
2019/mehrdad/mem_use/: contacts.csv  diskusage.py  diskusage.txt  message.html  message.txt  send_email.py  thinlinc.txt
2019/mehrdad/old/: contact.py  contacts.pickle  contacts.txt  contactx.py  ctest.py  main.py
2019/student-armin/event4friends/: app.py  site.sqlite
2019/student-rahim/quote_rest_api/: db.sqlite3
2022/Amin/: c1.py  c2.py  c3.pyw  my_test_database.db  sdfsdf.py
2022/Amin/cf_class/: class2.py  (+8 more)
2022/Arshia/: card.py  card_game.py  game.py  test.py
2022/Haneyeh/: contacts.txt  file_prac.py  hello.txt  higher_order_functions.py  phonebook.py  price.py  sells.csv
2022/Samaneh/: Exercise_02.rar
2023/Afshari/: fakesype.txt
2023/Amin/: ll.py
2023/Hossen/: s01.py  s02.py
2023/Mina/: hello.txt  sdf.py
2023/Rezaie/: dbwork.py  students.db
2023/Roxana/: class1.py  class11.py  class2.py  class3.py  class4.py  class5.py  class6.py  class7.py  class8.py  pythonwiki.txt  star.py
2023/Shyan/: bingo.py  bussen.py  fer_cel_conversion.py  three_days_planner.py
2023/Sina/: ui.py  xx.py
2023/Zahra/: oop1.py
2023/sajad/: 3.2.txt  3.3.txt  three_days_planner.py
2024/ali_fatemh/: Test_Notebook.ipynb  algo-s01.pptx
(+121 files in other folders)
